oop_mro/tests/trybuild/fail_ambiguous_base_trait_bound.stderr
warning: use of deprecated constant `_::__OOP_MRO_WARNING`: ambiguous base `Root` in class `Diamond`: `as_base::<Root>()` is unavailable because the target is not unique; use path-directed casts such as `as_base_via::<Left, Root>()`, `as_base_via::<Right, Root>()`
 --> tests/trybuild/fail_ambiguous_base_trait_bound.rs:3:1
  |
3 | / oop_class! {
4 | |     class Root {}
5 | |     class Left: Root {}
6 | |     class Right: Root {}
7 | |     class Diamond: Left, Right {}
8 | | }
  | |_^
  |
  = note: `#[warn(deprecated)]` on by default
  = note: this warning originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Diamond: oop_mro::AsClass<Root>` is not satisfied
  --> tests/trybuild/fail_ambiguous_base_trait_bound.rs:14:18
   |
14 |     require_root(&diamond);
   |     ------------ ^^^^^^^^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
help: the trait `oop_mro::AsClass<Root>` is not implemented for `Diamond`
  --> tests/trybuild/fail_ambiguous_base_trait_bound.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Root {}
 5 | |     class Left: Root {}
 6 | |     class Right: Root {}
 7 | |     class Diamond: Left, Right {}
   | |_________________^
help: the following other types implement trait `oop_mro::AsClass<Target>`
  --> tests/trybuild/fail_ambiguous_base_trait_bound.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Root {}
 5 | |     class Left: Root {}
 6 | |     class Right: Root {}
 7 | |     class Diamond: Left, Right {}
   | |                 ^
   | |                 |
   | |                 `Diamond` implements `oop_mro::AsClass<Diamond>`
   | |_________________`Diamond` implements `oop_mro::AsClass<Left>`
   |                   `Diamond` implements `oop_mro::AsClass<Right>`
note: required by a bound in `require_root`
  --> tests/trybuild/fail_ambiguous_base_trait_bound.rs:10:20
   |
10 | fn require_root<T: AsClass<Root>>(_: &T) {}
   |                    ^^^^^^^^^^^^^ required by this bound in `require_root`
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
